--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,228 @@
-.App {
-  text-align: center;
+ .App {
+    padding: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ .title_dis_box {
+     display: none;
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+ .title_mob_box {
+     display: flex;
+     font-size: 20px;
+     justify-content: center;
+     align-items: center;
+     margin-bottom: 10px;
+ }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+ .title_mob_icon{
+     fill: rgb(208, 198, 18);
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ .current_day_info_border {
+     border-radius: 20px;
+     background: linear-gradient(107deg, rgba(34,135,203,255) 0%, rgba(70,165,222,255) 100%);
+     width: 100%;
+     height: 150px;
+     position: relative;
+     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+     margin-bottom: 10px;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .current_day_info {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     border-radius: 20px;
+     background: linear-gradient(107deg, rgba(22,157,239,255) 0%, rgba(85,186,238,255) 100%);
+     width: 93%;
+     height: 130px;
+     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+     padding: 5px;
+ }
+
+ .current_day_info_box {
+     display: flex;
+     justify-content: space-around;
+     height: 80%;
+     padding: 5px;
+     border-bottom: 2px solid rgb(1 147 221);
+ }
+
+ .current_day_info_wind_kph {
+     display: flex;
+     padding: 10px;
+ }
+
+ .current_day_info_humidity,
+ .current_day_info_cloud {
+     position: relative;
+ }
+
+ .current_day_info_icon {
+     fill: white;
+     position: absolute;
+     top: 0;
+     left: -20px;
+ }
+
+ .current_day_info_title {
+     font-size: 12px;
+     text-align: left;
+     margin-right: 10px;
+ }
+
+ .current_day_info_value {
+     margin-top: 20px;
+     font-size: 30px;
+ }
+
+ .current_day_info_icon-wind {
+     fill: white;
+     margin-right: 5px;
+ }
+
+ .temp_info_border {
+     position: relative;
+     padding: 20px;
+     border-radius: 20px;
+     background: linear-gradient(107deg, rgba(34,135,203,255) 0%, rgba(70,165,222,255) 100%);
+     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+     height: 150px;
+     width: 100%;
+ }
+
+ .temp_info {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     border-radius: 20px;
+     background: linear-gradient(107deg, rgba(22,157,239,255) 0%, rgba(85,186,238,255) 100%);
+     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+     padding: 10px;
+     height: 130px;
+     width: 93%;
+     display: flex;
+     justify-content: space-around
+ }
+
+ .temp_info_box {
+     display: flex;
+     padding: 10px;
+     font-size: 80px;
+     align-items: center;
+ }
+
+ .temp_info_second_box {
+     width: 32%;
+     padding: 10px;
+     border-left: 2px solid rgb(1 147 221);
+     font-size: 12px;
+ }
+
+ .temp_info_second_box p:last-child {
+     font-size: 30px;
+     text-align: center;
+ }
+
+ .info_time {
+     grid-column: span 2 / span 2;
+     grid-row: span 2 / span 2;
+     grid-column-start: 4;
+     grid-row-start: 1;
+     margin-top: 10px;
+     text-align: center;
+     font-size: 30px;
+ }
+
+ @media screen and (min-width: 1515px) {
+     .App {
+         display: grid;
+         grid-template-columns: repeat(5, 1fr);
+         grid-template-rows: repeat(5, 1fr);
+         gap: 8px;
+         padding: 30px;
+     }
+
+     .title_dis_box {
+         display: block;
+         position: relative;
+         text-align: center;
+         font-size: 33px;
+     }
+
+     .title_dis_icon{
+         top: 10px;
+         left: 57px;
+         position: absolute;
+         fill: rgb(208, 198, 18);
+     }
+
+     .title_mob_box {
+         display: none;
+     }
+
+     .current_day_info_border {
+         grid-row: span 2 / span 2;
+         padding: 10px;
+         border-radius: 20px;
+         width: 420px;
+         height: 200px;
+         position: relative;
+         margin-bottom: 0;
+     }
+
+     .current_day_info {
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         border-radius: 20px;
+         width: 400px;
+         height: 180px;
+         padding: 20px;
+     }
+
+     .current_day_info_box {
+         height: 130px;
+         padding: 10px;
+     }
+
+     .current_day_info_value {
+         margin-top: 20px;
+         font-size: 50px;
+     }
+
+     .temp_info_border {
+         grid-row: span 2 / span 2;
+         grid-column-start: 1;
+         grid-row-start: 4;
+         height: 200px;
+         width: 500px;
+     }
+
+     .temp_info {
+         padding: 20px;
+         height: 180px;
+         width: 480px;
+     }
+
+     .temp_info_box {
+         font-size: 120px;
+     }
+
+     .temp_info_second_box {
+         width: 142px;
+         padding: 20px;
+     }
+
+     .info_time {
+         grid-column: span 2 / span 2;
+         grid-row: span 2 / span 2;
+         grid-column-start: 4;
+         grid-row-start: 1;
+         margin-top: 0;
+     }
+ }
+
