--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    color: #ffffff;
+    font-family: "Ubuntu", serif;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    margin: 10px;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul {
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+
+a {
+    outline: none;
+    text-decoration: none;
+}
+
+#root {
+    position: relative;
+    max-width: 340px;
+    height: 700px;
+    background: rgb(74,149,214);
+    background: linear-gradient(107deg, rgba(63,143,209,255) 0%, rgba(1,123,196,255) 100%);
+    overflow: hidden;
+}
+
+@media screen and (min-width: 580px) {
+    #root {
+        max-width: 610px;
+    }
+}
+
+@media screen and (min-width: 1515px) {
+    #root {
+        max-width: 1515px;
+    }
 }
