--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@
  .current_day_info_border {
      border-radius: 20px;
      background: linear-gradient(107deg, rgba(34,135,203,255) 0%, rgba(70,165,222,255) 100%);
-     width: 100%;
-     height: 150px;
+     /*width: 100%;*/
+     /*height: 150px;*/
      position: relative;
      box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
      margin-bottom: 10px;
@@ -35,8 +35,8 @@
      transform: translate(-50%, -50%);
      border-radius: 20px;
      background: linear-gradient(107deg, rgba(22,157,239,255) 0%, rgba(85,186,238,255) 100%);
-     width: 93%;
-     height: 130px;
+     /*width: 93%;*/
+     /*height: 130px;*/
      box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
      padding: 5px;
  }
@@ -44,7 +44,7 @@
  .current_day_info_box {
      display: flex;
      justify-content: space-around;
-     height: 80%;
+     /*height: 80%;*/
      padding: 5px;
      border-bottom: 2px solid rgb(1 147 221);
  }
@@ -101,8 +101,8 @@
      background: linear-gradient(107deg, rgba(22,157,239,255) 0%, rgba(85,186,238,255) 100%);
      box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
      padding: 10px;
-     height: 130px;
-     width: 93%;
+     /*height: 130px;*/
+     /*width: 93%;*/
      display: flex;
      justify-content: space-around
  }
@@ -115,7 +115,7 @@
  }
 
  .temp_info_second_box {
-     width: 32%;
+     /*width: 32%;*/
      padding: 10px;
      border-left: 2px solid rgb(1 147 221);
      font-size: 12px;
@@ -127,21 +127,17 @@
  }
 
  .info_time {
-     grid-column: span 2 / span 2;
-     grid-row: span 2 / span 2;
-     grid-column-start: 4;
-     grid-row-start: 1;
-     margin-top: 10px;
-     text-align: center;
-     font-size: 30px;
+     /*margin-top: 10px;*/
+     /*text-align: center;*/
+     /*font-size: 30px;*/
  }
 
  @media screen and (min-width: 1515px) {
      .App {
          display: grid;
-         grid-template-columns: repeat(5, 1fr);
-         grid-template-rows: repeat(5, 1fr);
-         gap: 8px;
+         grid-template-columns: repeat(4, 1fr);
+         grid-template-rows: repeat(6, 1fr);
+         gap: 20px;
          padding: 30px;
      }
 
@@ -163,8 +159,12 @@
          display: none;
      }
 
+     .current_day_info__box {
+         grid-row: span 3 / span 3;
+         grid-column-start: 4;
+     }
+
      .current_day_info_border {
-         grid-row: span 2 / span 2;
          padding: 10px;
          border-radius: 20px;
          width: 420px;
@@ -196,10 +196,9 @@
 
      .temp_info_border {
          grid-row: span 2 / span 2;
-         grid-column-start: 1;
-         grid-row-start: 4;
-         height: 200px;
-         width: 500px;
+         grid-row-start: 5;
+         /*height: 200px;*/
+         /*width: 500px;*/
      }
 
      .temp_info {
@@ -213,16 +212,13 @@
      }
 
      .temp_info_second_box {
-         width: 142px;
+         /*width: 142px;*/
          padding: 20px;
      }
 
      .info_time {
-         grid-column: span 2 / span 2;
-         grid-row: span 2 / span 2;
-         grid-column-start: 4;
-         grid-row-start: 1;
-         margin-top: 0;
+         grid-column-start: 3;
+         grid-row-start: 6;
      }
  }
 
